--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 </head>
 
 <body>
-    <h1>Technology Blog</h1>
+    <div class="menu-btn">
+        <i class="fas fa-bars"></i>
+    </div>
+
     <div class="container">
         <nav class="nav-main">
             <img src="./img/brand.png" alt="Blog" class="nav-brand">
-            <ul class="nav-menu">
+            <ul class="nav-menu show">
                 <li>
                     <a href="#">Web Develpment</a>
                 </li>
@@ -85,7 +88,207 @@
             </div>
         </div>
 
+        <section class="cards-banner-one">
+            <div class="content">
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae doloribus deserunt nemo delectus impedit eaque ab debitis distinctio voluptatibus eum, consequuntur numquam quo assumenda quidem quod quae excepturi vel repellat?</p>
+                <a href="#" class="btn">Learn More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+        </section>
+
+        <div class="news-cards">
+            <div>
+                <img src="./img/news1.jpg" alt="News 1">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, reprehenderit cumque consequuntur dignissimos esse incidunt adipisci eum quas magni perferendis.</p>
+                <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+            <div>
+                <img src="./img/news2.jpg" alt="News 1">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, reprehenderit cumque consequuntur dignissimos esse incidunt adipisci eum quas magni perferendis.</p>
+                <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+            <div>
+                <img src="./img/news3.jpg" alt="News 1">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, reprehenderit cumque consequuntur dignissimos esse incidunt adipisci eum quas magni perferendis.</p>
+                <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+            <div>
+                <img src="./img/news4.jpg" alt="News 1">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, reprehenderit cumque consequuntur dignissimos esse incidunt adipisci eum quas magni perferendis.</p>
+                <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+        </div>
+
+        <section class="cards-banner-two">
+            <div class="content">
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium repellat itaque, nesciunt quam dolore possimus excepturi mollitia molestias non laborum quidem impedit fugiat reiciendis magni explicabo expedita dolor deleniti corporis.</p>
+                <a href="#" class="btn">Learn More <i class="fas fa-angle-double-right"></i></a>
+
+            </div>
+        </section>
+
+        <section class="social">
+            <p>Follow TechNews</p>
+            <div class="links">
+                <a href="#">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </div>
+        </section>
+
+
     </div>
+
+    <div class="footer-links">
+        <div class="footer-container">
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>Title One</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>Title One</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>Title One</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>Title One</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Blockchain
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <h3>Tech News Copyright</h3>
+    </footer>
+    
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
